--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # =======================================================================================
 # Setting connection to database. Make sure MySQL running with correct port, database,
 #  username and password.
-spring.datasource.url=jdbc:mysql://localhost:3306/Leiden-Fase-2-DB
+spring.datasource.url=jdbc:mysql://localhost:3306/leiden_fase_2_db
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=Leiden-Fase-2
+spring.datasource.username=LeidenFase2
 spring.datasource.password=8GZpPjn1G1RhfL8i
 
 # =======================================================================================
@@ -31,4 +31,4 @@ spring.datasource.testWhileIdle=true
 spring.datasource.timeBetweenEvictionRunsMillis=3600000
 spring.datasource.validationQuery=SELECT 1
 
-server.port=8082
+server.port=8081
