--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # =======================================================================================
 # Setting connection to database. Make sure MySQL running with correct port, database,
 #  username and password.
-spring.datasource.url=jdbc:mysql://localhost:3306/leiden_fase_2_db
+spring.datasource.url=jdbc:mysql://localhost:3306/leidenfase2db
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=LeidenFase2
 spring.datasource.password=8GZpPjn1G1RhfL8i
